--- a/package.json
+++ b/package.json
@@ -10,19 +10,22 @@
   },
   "dependencies": {
     "@pinecone-database/pinecone": "^2.0.0",
-    "clsx": "^2.1.0",
+    "chart.js": "^4.4.1",
     "framer-motion": "^11.0.0",
     "groq-sdk": "^0.3.2",
     "lucide-react": "^0.344.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18",
-    "recharts": "^2.12.0",
-    "tailwind-merge": "^2.2.0"
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
