--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "lucide-react": "^0.344.0",
     "next": "14.1.0",
     "react": "^18.2.0",
+    "@huggingface/inference": "^2.6.4",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0"
+    
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
