--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "react": "^18.2.0",
     "@huggingface/inference": "^2.6.4",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0"
-    
+    "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
@@ -28,6 +29,7 @@
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "@tailwindcss/typography": "^0.5.10"
   }
 }
