--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@huggingface/inference": "^2.6.4",
     "@pinecone-database/pinecone": "^2.0.0",
     "chart.js": "^4.4.1",
     "framer-motion": "^11.0.0",
@@ -16,20 +17,19 @@
     "lucide-react": "^0.344.0",
     "next": "14.1.0",
     "react": "^18.2.0",
-    "@huggingface/inference": "^2.6.4",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3",
-    "@tailwindcss/typography": "^0.5.10"
+    "typescript": "^5.3.3"
   }
 }
