--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "@huggingface/inference": "^2.6.4",
-    "@pinecone-database/pinecone": "^2.0.0",
+    "ai": "^3.0.19",
+    "@ai-sdk/openai": "^0.0.14",
+    "zod": "^3.23.8",
+    "@supabase/supabase-js": "^2.43.1",
+    "@pinecone-database/pinecone": "^2.2.0",
     "chart.js": "^4.4.1",
     "framer-motion": "^11.0.0",
     "groq-sdk": "^0.3.2",
